--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="#about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Login.html">Sign Out</a>
+            <a class="nav-link" href="Login_form.html">Sign Out</a>
           </li>
         </ul>
         <form class="d-flex">
