--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <body>
 
+  <!-- Navbar Section Start -->
+
   <nav class="navbar navbar-expand-lg sticky-top" id="navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
