--- a/Login_form.html
+++ b/Login_form.html
@@ -16,24 +16,24 @@
     
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form>
+            <form action="login.php" method="POST">
                 <h1>Create Account</h1>
-                <span>or use your email for registeration</span>
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <button>Sign Up</button>
+                <span>or use your email for registration</span>
+                <input type="text" name="first_name" placeholder="First Name" required>
+                <input type="text" name="last_name" placeholder="Last Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button type="submit" name="action" value="signup">Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
-            <form>
+            <form action="login.php" method="POST">
                 <h1>Sign In</h1>
                 <span>or use your email password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <a href="#">Forget Your Password?</a>
-                <button>Sign In</button>
+                <button type="submit" name="action" value="signin">Sign In</button>
             </form>
         </div>
 
